--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "node-fetch": "^2.7.0"
+    "@11ty/eleventy": "^2.0.1"
   }
 }
